# Arrera-TK

./: .gitignore  README.md  README_en.md  README_fr.md  build_install_lib.sh  doc.md  main.py  pyproject.toml  requirement.txt  scriptTest.py  scriptTestWin.py  teste.py
arrera_tk/: arrera_tk.py  arrera_tk_old.py
old/: main.py
old/arrera_tk/: arrera_tk.py
src/arrera_tk/: __init__.py  aBackgroundImage.py  aButton.py  aCanvas.py  aCheckBox.py  aEntry.py  aEntryLengend.py  aFrame.py  aHourPickers.py  aImage.py  aLabel.py  aOptionMenu.py  aOptionMenuLengend.py  aRadioButton.py  aScrollableFrame.py  aSwicht.py  aText.py  aTextScrollable.py  aTk.py  aTopLevel.py  keyboad_manager.py  placement_Tool_Kit_internet.py  theme.py  utils.py  windows_about.py
tests/: LICENSE  demo.py  demo_theme.py  test.py
