[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arrera-tk"
version = "2.1.0"
authors = [
  { name="Baptiste", email="arrera-software@gmail.com" },
]
description = "Une librairie de widgets pour customtkinter."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "pillow",
]

[project.urls]
"Homepage" = "https://github.com/Arrera-Software/Arrera-TK"
"Bug Tracker" = "https://github.com/Arrera-Software/Arrera-TK/issues"

[tool.setuptools.packages.find]
where = ["src"]
